srcs/tester/base/map/value_comp/log.txt
./base/map/value_comp/patched.cpp:15:23: error: no viable conversion from 'ft::pair<const char, int>' to 'std::pair<char, int>'
  std::pair<char,int> highest = *mymap.rbegin();          // last element
                      ^         ~~~~~~~~~~~~~~~
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_pair.h:208:12: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'ft::pair<const char, int>' to 'const std::pair<char, int> &' for 1st argument
    struct pair
           ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_pair.h:276:2: note: candidate template ignored: could not match 'std::pair' against 'ft::pair'
        pair(const pair<_U1, _U2>& __p)
        ^
1 error generated.
